--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Sunnyside agency landing page</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
   About
@@ -14,24 +18,60 @@
 
   We are creatives
 
-  Transform your brand
+<main class="body__container">
+  <section class="body__container--articles">
 
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
+    <div class="articles__container">
+      <div class="articles__container--text">
+        <h2 class="text__header">Transform your brand</h2>
+        <p class="text__content">
+          We are a full-service creative agency specializing in helping brands grow fast. 
+          Engage your clients through compelling visuals that do most of the marketing for you.
+        </p>
+        <a href="#" class="text__link">Learn more</a>
+      </div>
 
-  Learn more
+      <div class="articles__container--image">
+        <img src="./images/desktop/image-transform.jpg" alt="An egg">
+      </div>
+    </div>
 
-  Stand out to the right audience
+    <div class="articles__container">
+      <div class="articles__container--text">
+        <h2 class="text__header">Stand out to the right audience</h2>
+        <p class="text__content">
+          Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.
+        </p>
+        <a href="#" class="text__link">Learn more</a>
+      </div>
 
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+      <div class="articles__container--image">
+        <img src="./images/desktop/image-stand-out.jpg" alt="A cup">
+      </div>
+    </div>
+  </section>
+  <section class="body__container--tiles">
+    <div class="tiles__container">
+      <div class="tiles__container--image">
+        <img src="./images/desktop/image-graphic-design.jpg" alt="Cherries">
+      </div>
+      <h3 class="tiles__container--header">Graphic design</h3>
+      <div class="tiles__container--content">
+        Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+      </div>
+    </div>
+    <div class="tiles__container">
+      <div class="tiles__container--image">
+        <img src="./images/desktop/image-photography.jpg" alt="An orange">
+      </div>
+      <h3 class="tiles__container--header">Photography</h3>
+      <div class="tiles__container--content">
+        Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+      </div>
+    </div>
+  </section>
+</main>
 
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
 
   Client testimonials
 
