--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="bg__color--blue">
-    <div class="body__container body__container--nav">
+    <div class="body__container--nav">
       <p class="nav__name">sunnyside</p>
       <div class="nav__burger">
         <svg width="24" height="18" xmlns="http://www.w3.org/2000/svg">
@@ -45,7 +45,6 @@
       </div>
     </div>
   </header>
-
   <main class="body__container">
     <section class="body__container--articles">
 
