--- a/index.html
+++ b/index.html
@@ -17,34 +17,20 @@
 <body>
   <nav class="bg__color--blue">
     <div class="body__container--nav">
-      <p class="nav__name">sunnyside</p>
+      <a class="nav__name" href="#">sunnyside</a>
       <div class="nav__burger">
         <svg width="24" height="18" xmlns="http://www.w3.org/2000/svg">
           <path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill="#FFF" fill-rule="evenodd" />
         </svg>
       </div>
-      <div class="nav__items show">
+      <div class="nav__items hidden">
         <a class="nav__item" href="#">About</a>
         <a class="nav__item" href="#">Services</a>
         <a class="nav__item" href="#">Projects</a>
         <a class="nav__item" href="#">Contact</a>
       </div>
-  </nav>
-  <header class="bg__color--blue">
-    <div class="body__container body__container--header">
-      <div class="header__slogan">
-        <h1 class="header__slogan--text">We are creatives</h1>
-      </div>
-      <div class="header__arrow">
-        <svg width="36" height="114" xmlns="http://www.w3.org/2000/svg">
-          <g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round"
-            stroke-linejoin="round">
-            <path d="M18 3v100M3 95.484l15 15 15-15" />
-          </g>
-        </svg>
-      </div>
     </div>
-  </header>
+  </nav>
   <main class="body__container">
     <section class="body__container--articles">
 
