--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       </div>
     </div>
   </nav>
+
   <main class="body__container">
     <section class="body__container--articles">
-
       <div class="articles__container">
         <div class="articles__container--text">
           <h2 class="text__header">Transform your brand</h2>
@@ -86,6 +86,28 @@
       </div>
     </section>
   </main>
+
+    <section class="body__container-fluid body__container--photos">
+
+      <picture>
+        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-milkbottles.jpg" />
+        <img src="images/mobile/image-gallery-milkbottles.jpg" loading="lazy" alt="milkbottles"
+          title="milkbottles in the sky" />
+      </picture>
+
+      <picture>
+        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-orange.jpg" />
+        <img src="images/mobile/image-gallery-orange.jpg" loading="lazy" alt="orange" title="half an orange on a plate" />
+      </picture>
+      <picture>
+        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-cone.jpg" />
+        <img src="images/mobile/image-gallery-cone.jpg" loading="lazy" alt="cone" title="cone on blue" />
+      </picture>
+      <picture>
+        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-sugarcubes.jpg" />
+        <img src="images/mobile/image-gallery-sugar-cubes.jpg" loading="lazy" alt="sugar" title="sugar cubes on pink" />
+      </picture>
+    </section>
 
 
   Client testimonials
