[SA-header] Header fixed color, padding

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <main class="body__container">
     <section class="body__container--articles">
 
-      <div class="articles__container">
+      <div id="articles__container" class="articles__container">
         <div class="articles__container--text">
           <h2 class="text__header">Transform your brand</h2>
           <p class="text__content">
