--- a/index.html
+++ b/index.html
@@ -31,10 +31,29 @@
       </div>
     </div>
   </nav>
+
+  <header class="bg__color--blue">
+    <div class="body__container body__container--header">
+      <div class="header__slogan">
+        <h1 class="header__slogan--text">We are creatives</h1>
+        <div class="header__slogan--arrow">
+          <a href="#articles__container">
+            <svg width="36" height="114" xmlns="http://www.w3.org/2000/svg">
+              <g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round"
+                stroke-linejoin="round">
+                <path d="M18 3v100M3 95.484l15 15 15-15" />
+              </g>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </header>
+
   <main class="body__container">
     <section class="body__container--articles">
 
-      <div class="articles__container">
+      <div id="articles__container" class="articles__container">
         <div class="articles__container--text">
           <h2 class="text__header">Transform your brand</h2>
           <p class="text__content">
