Sa main photos (#9)
* [SA-main_photos] Fixed desktop and mobile

* merge style scss

--- a/index.html
+++ b/index.html
@@ -106,6 +106,28 @@
     </section>
   </main>
 
+    <section class="body__container-fluid body__container--photos">
+
+      <picture>
+        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-milkbottles.jpg" />
+        <img src="images/mobile/image-gallery-milkbottles.jpg" loading="lazy" alt="milkbottles"
+          title="milkbottles in the sky" />
+      </picture>
+
+      <picture>
+        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-orange.jpg" />
+        <img src="images/mobile/image-gallery-orange.jpg" loading="lazy" alt="orange" title="half an orange on a plate" />
+      </picture>
+      <picture>
+        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-cone.jpg" />
+        <img src="images/mobile/image-gallery-cone.jpg" loading="lazy" alt="cone" title="cone on blue" />
+      </picture>
+      <picture>
+        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-sugarcubes.jpg" />
+        <img src="images/mobile/image-gallery-sugar-cubes.jpg" loading="lazy" alt="sugar" title="sugar cubes on pink" />
+      </picture>
+    </section>
+
 
   Client testimonials
 
