[SA-main_social] Bazowa struktura

--- a/index.html
+++ b/index.html
@@ -104,45 +104,78 @@
         </div>
       </div>
     </section>
+    <section class="body__container--reviews">
+
+      <h2 class="reviews__container--header">Client testimonials</h2>
+      <div class="reviews__container">
+        <div class="review__container">
+          <div class="review__container--image">
+            <img src="./images/image-emily.jpg" alt="Emily R.">
+          </div>
+          <p class="text__content">
+            We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+          </p>
+          <p class="text__name">
+            Emily R.
+          </p>
+          <p class="text__position">
+            Marketing Director
+          </p>
+        </div>
+        <div class="review__container">
+          <div class="review__container--image">
+            <img src="./images/image-thomas.jpg" alt="Thomas S.">
+          </div>
+          <p class="text__content">
+            Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable
+  experience.
+          </p>
+          <p class="text__name">
+            Thomas S.
+          </p>
+          <p class="text__position">
+            Chief Operating Officer
+          </p>
+        </div>
+        <div class="review__container">
+          <div class="review__container--image">
+            <img src="./images/image-jennie.jpg" alt="Jennie F.">
+          </div>
+          <p class="text__content">
+            Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+          </p>
+          <p class="text__name">
+            Jennie F.
+          </p>
+          <p class="text__position">
+            Business Owner
+          </p>
+        </div>
+      </div>
+    </section>
   </main>
 
-    <section class="body__container-fluid body__container--photos">
+  <section class="body__container-fluid body__container--photos">
 
-      <picture>
-        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-milkbottles.jpg" />
-        <img src="images/mobile/image-gallery-milkbottles.jpg" loading="lazy" alt="milkbottles"
-          title="milkbottles in the sky" />
-      </picture>
+    <picture>
+      <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-milkbottles.jpg" />
+      <img src="images/mobile/image-gallery-milkbottles.jpg" loading="lazy" alt="milkbottles"
+        title="milkbottles in the sky" />
+    </picture>
 
-      <picture>
-        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-orange.jpg" />
-        <img src="images/mobile/image-gallery-orange.jpg" loading="lazy" alt="orange" title="half an orange on a plate" />
-      </picture>
-      <picture>
-        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-cone.jpg" />
-        <img src="images/mobile/image-gallery-cone.jpg" loading="lazy" alt="cone" title="cone on blue" />
-      </picture>
-      <picture>
-        <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-sugarcubes.jpg" />
-        <img src="images/mobile/image-gallery-sugar-cubes.jpg" loading="lazy" alt="sugar" title="sugar cubes on pink" />
-      </picture>
-    </section>
-
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable
-  experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
+    <picture>
+      <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-orange.jpg" />
+      <img src="images/mobile/image-gallery-orange.jpg" loading="lazy" alt="orange" title="half an orange on a plate" />
+    </picture>
+    <picture>
+      <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-cone.jpg" />
+      <img src="images/mobile/image-gallery-cone.jpg" loading="lazy" alt="cone" title="cone on blue" />
+    </picture>
+    <picture>
+      <source media="(min-width: 768px)" srcset="images/desktop/image-gallery-sugarcubes.jpg" />
+      <img src="images/mobile/image-gallery-sugar-cubes.jpg" loading="lazy" alt="sugar" title="sugar cubes on pink" />
+    </picture>
+  </section>
 
   About
   Services
@@ -151,7 +184,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Our excellent team!</a>.
   </div>
   <script src="./js/script.js"></script>
 </body>
