[SA-main_social] Style dla desktop i mobile

--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
         </div>
       </div>
     </section>
-    <section class="body__container--reviews">
+  </main>
+
+  <section class="body__container-fluid body__container--reviews">
+    <div class="body__container">
 
       <h2 class="reviews__container--header">Client testimonials</h2>
       <div class="reviews__container">
@@ -152,8 +155,8 @@
           </p>
         </div>
       </div>
-    </section>
-  </main>
+    </div>
+  </section>
 
   <section class="body__container-fluid body__container--photos">
 
